# faust-rs

./: .gitattributes  AGENTS.md  Cargo.toml  JOURNAL.md  LICENSE  README.md
crates/box-ffi/: Cargo.toml  README.md
crates/box-ffi/include/: libfaust-box-c.h  libfaust-box.h
crates/box-ffi/src/: lib.rs
crates/box-ffi/tests/header-smoke/: libfaust_box_c_header_smoke.c  libfaust_box_cpp_header_smoke.cpp
crates/codegen/: Cargo.toml  README.md
crates/codegen/examples/: dump_sine_phasor_c.rs  dump_sine_phasor_cpp.rs  interp_baseline.rs
crates/codegen/src/: fixtures.rs  json.rs  lib.rs
crates/codegen/src/backends/: c_family.rs  faust_api.rs  mod.rs  purity.rs
crates/codegen/src/json/: tests.rs
crates/codegen/tests/: cpp_fir_sine_phasor.rs
crates/compiler/: Cargo.toml  README.md
crates/compiler/examples/: corpus_scan_cranelift.rs  count_vector_corpus.rs  rad_adaptive_notch.rs  rad_gradient_descent.rs  rad_vs_fad_perf.rs
crates/compiler/src/: box_preview.rs  diagnostics.rs  enrobage.rs  error_mapping.rs  golden.rs  json_naming.rs  lib.rs  main.rs  paths.rs  signal_lowering.rs  tests.rs
crates/compiler/src/cli/: args.rs  diagnostics.rs  mod.rs  runner.rs  tests.rs  timer.rs
crates/compiler/tests/: backend_class_name_contract.rs  block_reverse_ad.rs  cli_diagnostics_channel.rs  clocked_emission_structure.rs  clocked_waveform_regression.rs  cpp_clocked_differential.rs  cpp_signal_differential.rs  diagnostic_errors.rs  enrobage_integration.rs  enrobage_paths.rs  enrobage_search.rs  enrobage_stream.rs  eval_cpp_micro_differential.rs  fad_recursive_runtime.rs  faustlibraries_scan.rs  import_loading_cpp_gap.rs  inline_environment_import_parity.rs  interleave_fft.rs  ondemand_pipeline.rs  p3_shadow_mode.rs  pv_vector_slice.rs  rad_runtime.rs  signal_fir_lane.rs  signal_pipeline.rs  vector_clock_ad.rs  vector_mode.rs  zita_pipeline.rs
crates/cranelift-ffi/: Cargo.toml  README.md
crates/cranelift-ffi/cpp/: cranelift-dsp.cpp
crates/cranelift-ffi/examples/: compute_bench.rs  corpus_scan.rs  export_clif.rs
crates/cranelift-ffi/include/: cranelift-dsp-c.h  cranelift-dsp.h
crates/cranelift-ffi/src/: cache.rs  clif.rs  diff.rs  factory.rs  instance.rs  lib.rs  runtime.rs  types.rs  ui.rs
crates/cranelift-ffi/tests/header-smoke/: cranelift_dsp_c_header_smoke.c  cranelift_dsp_cpp_header_smoke.cpp
crates/eval/: Cargo.toml  README.md
crates/eval/src/: apply.rs  case.rs  definitions.rs  environment.rs  error.rs  iteration.rs  label.rs  lib.rs  loop_detector.rs  modulation.rs  pattern_matcher.rs  simplify.rs  source_context.rs  ui_widgets.rs
crates/eval/tests/: core_eval.rs
crates/faust-ffi/: Cargo.toml  README.md
crates/faust-ffi/src/: lib.rs
crates/foreign-call/: Cargo.toml  README.md
crates/foreign-call/src/: lib.rs
crates/impulse-runner/: Cargo.toml  README.md
crates/impulse-runner/src/: main.rs
crates/interp-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/interp-ffi/include/: interpreter-dsp-c.h  interpreter-dsp.h
crates/interp-ffi/src/: cache.rs  factory.rs  instance.rs  lib.rs  types.rs  ui.rs
crates/normalize/: Cargo.toml  README.md
crates/normalize/src/: aterm.rs  lib.rs  mterm.rs  normalform.rs  normalize.rs  rec_merge.rs  simplify.rs
crates/parser/: Cargo.toml  README.md  build.rs
crates/parser-proto/: Cargo.toml  README.md  build.rs
crates/parser-proto/src/: context.rs  lib.rs  source_reader.rs
crates/parser-proto/src/grammar/: faustlexer.l  faustparser.y
crates/parser-proto/tests/: cpp_differential.rs  lexer_tokens.rs  parser_ctx.rs  parser_diagnostics.rs  parser_semantic_parity.rs  parser_slice1.rs  parser_slice10_primitives.rs  parser_slice11_variants.rs  parser_slice12_modulation.rs  parser_slice2.rs  parser_slice3.rs  parser_slice4.rs  parser_slice5_doc.rs  parser_slice6_scope_modules.rs  parser_slice7_foreign.rs  parser_slice8_case.rs  parser_slice9_lambda_groups.rs  parser_smoke.rs  source_reader.rs
crates/parser-proto/tests/support/: box_match_helpers.rs  node_match_helpers.rs
crates/parser/src/: context.rs  lib.rs  metadata.rs  source_reader.rs
crates/parser/src/grammar/: faustlexer.l  faustparser.y
crates/parser/tests/: api_bridge.rs  production_corpus.rs  structural_cpp_differential.rs
crates/propagate/: Cargo.toml  README.md
crates/propagate/src/: api.rs  arity.rs  clock_domain.rs  engine.rs  error.rs  flat.rs  forward_ad.rs  lib.rs  reverse_ad.rs  stateful_rad.rs  tests.rs  transpose_ad.rs  ui_build.rs
crates/propagate/tests/: core_api.rs
crates/py-faust/: .gitignore  CHANGELOG.md  Cargo.toml  LIMITATIONS.md  Makefile  README.md  TODO.md  pyproject.toml
crates/py-faust-rs/: CHANGELOG.md  Cargo.toml  LIMITATIONS.md  Makefile  README.md  TODO.md  pyproject.toml
crates/py-faust-rs/docs/: comparison.md
crates/py-faust-rs/src/: lib.rs
crates/py-faust-rs/tests/: conftest.py  test_compile.py  test_compute.py  test_compute_into.py  test_imports.py  test_lifetime.py  test_module.py
crates/py-faust/src/: lib.rs
crates/py-faust/tests/: conftest.py  test_fixtures.py  test_params.py  test_persistence.py  test_precision.py
crates/signal-ffi/: Cargo.toml  README.md
crates/signal-ffi/include/: libfaust-signal-c.h  libfaust-signal.h
crates/signal-ffi/src/: lib.rs
crates/sigtype/: Cargo.toml  README.md
crates/sigtype/src/: api.rs  enums.rs  factory.rs  lib.rs  ops.rs  rules.rs  types.rs
crates/transform/: Cargo.toml  README.md
crates/transform/src/: lib.rs  signal_prepare.rs
crates/tree-ffi/: Cargo.toml  README.md
crates/tree-ffi/src/: lib.rs
crates/wasm-ffi/: Cargo.toml  README.md  build.rs
crates/wasm-ffi/src/: lib.rs
crates/xtask/: Cargo.toml  README.md
crates/xtask/src/: backend_align.rs  code_graphs.rs  corpus_status_query.rs  emission_determinism.rs  fir_dump.rs  golden.rs  libfaust_api_matrix.rs  libfaust_export_check.rs  lockstep_simd.rs  main.rs  p7_matrix.rs  reports.rs  runtime_trace.rs  shared.rs  structure_check.rs  tests.rs  vector_compile_budget.rs  vector_coverage.rs  wasm.rs
examples/rust/dx7-piano/: Cargo.toml  README.md  regenerate.sh
(+1378 files in other folders)
