[workspace]
members = [
  "crates/tlib",
  "crates/errors",
  "crates/interval",
  "crates/algebra",
  "crates/graph",
  "crates/boxes",
  "crates/parser",
  "crates/signals",
  "crates/ui",
  "crates/eval",
  "crates/propagate",
  "crates/normalize",
  "crates/sigtype",
  "crates/transform",
  "crates/fir",
  "crates/foreign-call",
  "crates/codegen",
  "crates/draw",
  "crates/doc",
  "crates/utils",
  "crates/compiler",
  "crates/xtask",
  "crates/interp-ffi",
  "crates/cranelift-ffi",
  "crates/box-ffi",
  "crates/faust-ffi",
  "crates/wasm-ffi",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.4.0"
license = "Apache-2.0"
authors = ["faust-rs contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"
unused_attributes = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
all = "warn"
