[workspace]
members = [
  "crates/tlib",
  "crates/errors",
  "crates/interval",
  "crates/algebra",
  "crates/graph",
  "crates/boxes",
  "crates/parser",
  "crates/signals",
  "crates/ui",
  "crates/eval",
  "crates/propagate",
  "crates/normalize",
  "crates/sigtype",
  "crates/transform",
  "crates/fir",
  "crates/foreign-call",
  "crates/codegen",
  "crates/draw",
  "crates/doc",
  "crates/utils",
  "crates/tree-ffi",
  "crates/compiler",
  "crates/xtask",
  "crates/interp-ffi",
  "crates/cranelift-ffi",
  "crates/box-ffi",
  "crates/signal-ffi",
  "crates/faust-ffi",
  "crates/wasm-ffi",
  "crates/impulse-runner",
]
# Proof-of-concept PyO3 bindings: standalone crate kept out of the workspace so
# its `extension-module` linkage never affects `cargo build --workspace` or CI.
exclude = ["crates/py-faust-rs"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.5.0"
license = "LGPL-2.1-or-later"
authors = ["faust-rs contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"
unused_attributes = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
all = "warn"
