[package]
name = "codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
fir = { path = "../fir" }
cranelift-codegen = "0.117"
cranelift-frontend = "0.117"
cranelift-jit = "0.117"
cranelift-module = "0.117"
cranelift-native = "0.117"
