[package]
name = "codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = ["backend-wasm"]
backend-wasm = ["dep:wasm-encoder", "dep:wasmparser"]

[dependencies]
fir = { path = "../fir" }
foreign-call = { path = "../foreign-call" }
wasm-encoder = { version = "0.225", optional = true }
wasmparser = { version = "0.225", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cranelift-codegen = "0.117"
cranelift-frontend = "0.117"
cranelift-jit = "0.117"
cranelift-module = "0.117"
cranelift-native = "0.117"
