[package]
name = "compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
errors = { path = "../errors" }
parser = { path = "../parser" }
codegen = { path = "../codegen" }
boxes = { path = "../boxes" }
eval = { path = "../eval" }
propagate = { path = "../propagate" }
signals = { path = "../signals" }
fir = { path = "../fir" }
serde_json = "1"
tlib = { path = "../tlib" }
transform = { path = "../transform" }

[dev-dependencies]
[[bin]]
name = "faust-rs"
path = "src/main.rs"

[lints]
workspace = true
