[package]
name = "cranelift-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "faust_cranelift"
crate-type = ["rlib"]

[features]
default = []
standalone-capi-globals = []

[dependencies]
faust_box = { package = "box-ffi", path = "../box-ffi", default-features = false }
codegen = { path = "../codegen" }
compiler = { path = "../compiler" }
fir = { path = "../fir" }
utils = { path = "../utils" }

[dev-dependencies]
interp_ffi = { package = "interp-ffi", path = "../interp-ffi" }

# FFI crate will require raw pointers/unsafe in later phases; allow is local to
# this crate so the workspace default can remain strict.
[lints.rust]
unsafe_code = "allow"
unused_attributes = "warn"
unused_lifetimes = "warn"

[lints.clippy]
all = "warn"
