[package]
name = "eval"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ahash = "0.8"
boxes = { path = "../boxes" }
errors = { path = "../errors" }
parser = { path = "../parser" }
propagate = { path = "../propagate" }
signals = { path = "../signals" }
tlib = { path = "../tlib" }

[lints]
workspace = true
