[package]
name = "eval"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ahash = { version = "0.8", default-features = false, features = ["std"] }
boxes = { path = "../boxes" }
errors = { path = "../errors" }
normalize = { path = "../normalize" }
parser = { path = "../parser" }
propagate = { path = "../propagate" }
signals = { path = "../signals" }
tlib = { path = "../tlib" }

[lints]
workspace = true
