[package]
name = "foreign-call"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints.rust]
unsafe_code = "allow" # Runtime bridge from symbolic foreign bindings to raw host pointers.
unused_attributes = "warn"
unused_lifetimes = "warn"

[lints.clippy]
all = "warn"
