[package]
name = "normalize"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
tlib     = { path = "../tlib" }
signals  = { path = "../signals" }
sigtype  = { path = "../sigtype" }
interval = { path = "../interval" }
