[package]
name = "parser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
boxes = { path = "../boxes" }
errors = { path = "../errors" }
cfgrammar = "0.13.10"
lrlex = "0.13.10"
lrpar = "0.13.10"
tlib = { path = "../tlib" }

[build-dependencies]
cfgrammar = "0.13.10"
lrlex = "0.13.10"
lrpar = "0.13.10"
