[package]
name = "propagate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ahash = "0.8"
boxes = { path = "../boxes" }
errors = { path = "../errors" }
signals = { path = "../signals" }
tlib = { path = "../tlib" }
ui = { path = "../ui" }

[lints]
workspace = true
