[package]
name = "propagate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ahash = { version = "0.8", default-features = false, features = ["std"] }
boxes = { path = "../boxes" }
errors = { path = "../errors" }
smallvec = "1.15"
signals = { path = "../signals" }
tlib = { path = "../tlib" }
ui = { path = "../ui" }

[lints]
workspace = true
