[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "py-faust-rs"
version = "0.5.0"
description = "Proof-of-concept Python bindings for the faust-rs interpreter backend"
requires-python = ">=3.9"
license = { text = "LGPL-2.1-or-later" }

# Dev tooling managed by uv (`uv sync` installs these into the venv). maturin is
# both the PEP 517 build backend (above) and the develop/build CLI used here.
# NumPy is dev-only (it is not a runtime dependency of the extension); it lets the
# `compute_into` buffer-protocol tests exercise the primary real-world consumer.
[dependency-groups]
dev = ["maturin>=1.5,<2.0", "pytest>=7", "numpy>=1.24"]

[tool.maturin]
# The importable module is `faust_rs` (the [lib] name in Cargo.toml).
module-name = "faust_rs"

[tool.pytest.ini_options]
testpaths = ["tests"]

