[package]
name = "signal-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints.rust]
unsafe_code = "allow"
unused_attributes = "warn"
unused_lifetimes = "warn"

[lints.clippy]
all = "warn"

[lib]
name = "faust_signal"
crate-type = ["rlib"]

[dependencies]
faust_box = { package = "box-ffi", path = "../box-ffi", default-features = false }
normalize = { path = "../normalize" }
signals = { path = "../signals" }
tlib = { path = "../tlib" }
tree-ffi = { path = "../tree-ffi" }
utils = { path = "../utils" }
