[package]
name = "signal-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints.rust]
unsafe_code = "allow"
unused_attributes = "warn"
unused_lifetimes = "warn"

[lints.clippy]
all = "warn"

[lib]
name = "signal_ffi"
crate-type = ["rlib"]

[dependencies]
box_ffi = { package = "box-ffi", path = "../box-ffi", default-features = false }
normalize = { path = "../normalize" }
signals = { path = "../signals" }
tlib = { path = "../tlib" }
tree-ffi = { path = "../tree-ffi" }
utils = { path = "../utils" }
