[package]
name = "transform"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
fir     = { path = "../fir" }
signals = { path = "../signals" }
sigtype = { path = "../sigtype" }
tlib    = { path = "../tlib" }
ui      = { path = "../ui" }
