[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
compiler = { path = "../compiler" }
codegen = { path = "../codegen" }
fir = { path = "../fir" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasmparser = "0.240"

[dev-dependencies]
wat = "1"

[lints]
workspace = true
